src/Components/Environment.module.css
.wrapper {
	margin-block: 2rem;
	display: grid;
	max-width: calc(8rem * var(--Environment-size-width));
	margin-inline: auto;
	grid-template-columns: repeat(var(--Environment-size-width), 1fr);
	grid-template-rows: repeat(var(--Environment-size-height), 1fr);
	gap: 0.125rem;
	position: relative;
	isolation: isolate;
}
.segment {
	position: relative;
	display: grid;
	align-items: center;
	grid-column: calc(var(--Environment-segment-position-x) + 1);
	grid-row: calc(var(--Environment-segment-position-y) + 1);
	aspect-ratio: 1;
}
.player img,
.swordPicked img,
.segment img {
	width: 100%;
	object-fit: cover;
	position: absolute;
	inset: 0;
}

.player {
	position: relative;
	z-index: 2;
	grid-column: calc(var(--Environment-player-position-x) + 1);
	grid-row: calc(var(--Environment-player-position-y) + 1);
	animation-duration: 0.5s;
}

@keyframes goForward {
	0% {
		transform: translateX(-100%);
	}
	100% {
		transform: none;
	}
}
.is_animating_goForward {
	animation-name: goForward;
}
@keyframes jump {
	0% {
		transform: translateX(-100%);
	}
	50% {
		transform: translate(-50%, -30%);
	}
	100% {
		transform: none;
	}
}
.is_animating_jump {
	animation-name: jump;
}
@keyframes kiss {
	50% {
		transform: rotate(40deg);
	}
}
.is_animating_kiss {
	transform-origin: 50% 80%;
	animation-name: kiss;
}
@keyframes invalidMove {
	0% {
		transform: translate(1px, 1px) rotate(0deg);
	}
	10% {
		transform: translate(-1px, -2px) rotate(-1deg);
	}
	20% {
		transform: translate(-3px, 0px) rotate(1deg);
	}
	30% {
		transform: translate(3px, 2px) rotate(0deg);
	}
	40% {
		transform: translate(1px, -1px) rotate(1deg);
	}
	50% {
		transform: translate(-1px, 2px) rotate(-1deg);
	}
	60% {
		transform: translate(-3px, 1px) rotate(0deg);
	}
	70% {
		transform: translate(3px, 1px) rotate(-1deg);
	}
	80% {
		transform: translate(-1px, -1px) rotate(1deg);
	}
	90% {
		transform: translate(1px, 2px) rotate(0deg);
	}
	100% {
		transform: translate(1px, -2px) rotate(-1deg);
	}
}
.is_animating_invalidMove {
	animation-name: invalidMove;
}

.swordPicked {
	z-index: 1;
}

